deployment/checkout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checkout-ingress
  namespace: e-ticket
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - checkoutpage.site
      secretName: checkoutpage-tls
  rules:
    - host: checkoutpage.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: checkout-app
                port:
                  number: 80
